# pkg/entity/factory/product.factory.go
@@ -5,7 +5,6 @@ import (
 	"fmt"
 	spec "github.com/ESPOIR-DITE/ditkay-eshop/api/server/ditkay-eshop-api"
 	"github.com/ESPOIR-DITE/ditkay-eshop/pkg/entity"
-	"strconv"
 )
 
 type ProductFactory interface {
@@ -19,14 +18,7 @@ func NewProductFactoryImpl() *ProductFactoryImpl {
 }
 
 func (m ProductFactoryImpl) CreateProduct(body spec.Product) (*entity.Product, error) {
-	var productId int
-	if *body.Id != "" {
-		id, err := strconv.Atoi(*body.Id)
-		if err != nil {
-			return nil, errors.New(fmt.Sprintf("error during conversion %s", err))
-		}
-		productId = id
-	}
+
 	if *body.Name == "" {
 		return nil, errors.New(fmt.Sprintf("Product name required."))
 	}
@@ -35,7 +27,7 @@ func (m ProductFactoryImpl) CreateProduct(body spec.Product) (*entity.Product, e
 	}
 
 	return &entity.Product{
-		Id:          productId,
+		Id:          *body.Id,
 		Name:        *body.Name,
 		BuyPrice:    *body.BuyPrice,
 		SellPrice:   *body.SellPrice,
