# pkg/entity/product.media.go
@@ -1,8 +1,8 @@
 package entity
 
 type ProductMedia struct {
-	Id        int
-	MediaId   int
-	MediaType int
-	ProductId int
+	Id        string
+	MediaId   string
+	MediaType string
+	ProductId string
 }
