# pkg/http/controller/product.controller.Impl.go
@@ -3,12 +3,10 @@ package controller
 import (
 	"encoding/json"
 	"errors"
-	"fmt"
 	spec "github.com/ESPOIR-DITE/ditkay-eshop/api/server/ditkay-eshop-api"
 	"github.com/ESPOIR-DITE/ditkay-eshop/pkg/logger"
 	"github.com/labstack/echo/v4"
 	"net/http"
-	"strconv"
 )
 
 type ProductControllerImpl struct {
@@ -32,7 +30,7 @@ func (d DitKayEshopApiController) PatchProduct(ctx echo.Context) error {
 }
 func (d DitKayEshopApiController) PostProduct(ctx echo.Context) error {
 	var product spec.Product
-	logger.Log.Info("Product received for Updating.")
+	logger.Log.Info("Product received Create request.")
 	if err := json.NewDecoder(ctx.Request().Body).Decode(&product); err != nil {
 		return ctx.JSON(http.StatusBadRequest, err)
 	}
@@ -50,11 +48,7 @@ func (d DitKayEshopApiController) GetProductProductId(ctx echo.Context, productI
 	if productId == "" {
 		return ctx.JSON(http.StatusBadRequest, errors.New("productId missing error"))
 	}
-	id, err := strconv.Atoi(productId)
-	if err != nil {
-		return ctx.JSON(http.StatusBadRequest, fmt.Sprintf("error during conversion %s", err))
-	}
-	response, err := d.ProductService.ReadProduct(id)
+	response, err := d.ProductService.ReadProduct(productId)
 	if err != nil {
 		return ctx.JSON(http.StatusBadRequest, err)
 	}
